@@ -30,11 +30,11 @@ namespace Rcpp {
 
    SEXP Evaluator::run(SEXP expr, SEXP env) throw(eval_error) {
 	
+   	SEXP call = PROTECT( Rf_lang3( Rf_install("rcpp_tryCatch") , expr, env ) ) ;
+	
    	/* already protected */
    	SEXP RCPP = Environment::Rcpp_namespace(); 
-   	   
-	SEXP call = PROTECT( Rf_lang3( Rf_install("rcpp_tryCatch") , expr, env ) ) ;
-	
+   	
 	/* call the tryCatch call */
 	SEXP res = PROTECT( Rf_eval( call, RCPP ) );
 	
@@ -57,4 +57,14 @@ namespace Rcpp {
     SEXP Evaluator::run( SEXP expr) throw(eval_error){
     	return run(expr, R_GlobalEnv );
     }
+    
+    
+namespace internal{
+/* this is defined here because we need to be sure that Evaluator is 
+   defined */
+    SEXP convert_using_rfunction(SEXP x, const char* const fun){
+    	    return Evaluator::run( Rf_lcons( Rf_install(fun), Rf_cons(x, R_NilValue) ) ) ; 
+    }
+} // namespace internal
+    
 } // namespace Rcpp
