@@ -23,34 +23,24 @@
 #define Rcpp_SimpleVector_h
 
 #include <RcppCommon.h>
+#include <Rcpp/RObject.h>
 #include <Rcpp/VectorBase.h>
+#include <Rcpp/r_cast.h>
 
 namespace Rcpp{
-	
+
 template <int RTYPE, typename CTYPE>
 class SimpleVector : public VectorBase {
 public:
 	SimpleVector() : VectorBase(), start(0){}
 	
-	SimpleVector(SEXP x) throw(not_compatible) : VectorBase(), start(0) {
-		int type = TYPEOF(x) ;
-		switch( type ){
-			case RTYPE:
-				setSEXP( x) ;
-				break ;
-			default:
-				if( type == INTSXP || type == LGLSXP || type == CPLXSXP || type == RAWSXP || type == REALSXP ){
-					setSEXP( Rf_coerceVector(x, RTYPE ) );
-					break ;
-				} else{
-					/* TODO : include RTYPE in the message  */
-					throw not_compatible( "cannot convert to simple vector" ) ;
-				}
-		}
+	SimpleVector(SEXP x) throw(RObject::not_compatible) : VectorBase(), start(0){
+		SEXP y = r_cast<RTYPE>( x ) ;
+		setSEXP( y );
 	}
-
-	SimpleVector( const size_t& size): VectorBase(), start(0){
-		setSEXP( Rf_allocVector( RTYPE, size ) ) ;
+	
+	SimpleVector( const size_t& size){
+		setSEXP( Rf_allocVector( RTYPE, size) ) ;
 	}
 	
 #ifdef HAS_INIT_LISTS
@@ -63,18 +53,18 @@ public:
 	inline CTYPE* begin() const{ return start ; }
 	inline CTYPE* end() const{ return start+Rf_length(m_sexp); }
 	
-	CTYPE& operator()( const size_t& i) throw(index_out_of_bounds){
-		if( i >= static_cast<size_t>(Rf_length(m_sexp)) ) throw index_out_of_bounds() ;
+	CTYPE& operator()( const size_t& i) throw(RObject::index_out_of_bounds){
+		if( i >= static_cast<size_t>(Rf_length(m_sexp)) ) throw RObject::index_out_of_bounds() ;
 		return start[i] ;
 	}
 	
-	CTYPE& operator()( const size_t& i, const size_t& j) throw(not_a_matrix,index_out_of_bounds){
+	CTYPE& operator()( const size_t& i, const size_t& j) throw(VectorBase::not_a_matrix,RObject::index_out_of_bounds){
 		/* TODO: factor this code out into a Offset class otr something */
-		if( !Rf_isMatrix(m_sexp) ) throw not_a_matrix() ;
+		if( !Rf_isMatrix(m_sexp) ) throw VectorBase::not_a_matrix() ;
 		int *dim = INTEGER( Rf_getAttrib( m_sexp, R_DimSymbol ) ) ;
 		size_t nrow = static_cast<size_t>(dim[0]) ;
 		size_t ncol = static_cast<size_t>(dim[1]) ;
-		if( i >= nrow || j >= ncol ) throw index_out_of_bounds() ;
+		if( i >= nrow || j >= ncol ) throw RObject::index_out_of_bounds() ;
 		return start[ i + nrow*j ] ;
 	}
 
